deploy: 0155c7eb5a492f13c1c055f7aebda01ca20899fd

--- a/tecnicos/mt05/index.html
+++ b/tecnicos/mt05/index.html
@@ -686,12 +686,12 @@
     <div class="carousel-inner">  
         <div class="carousel-item active">  
             <div class="video-container">  
-                <iframe src="https://drive.google.com/file/d/1KHNdlB1YsIFUMXJHP21e-_kgeg_2Dc3q/preview" frameborder="0" allowfullscreen></iframe>  
+                <iframe src="https://drive.google.com/file/d/1KHNdlB1YsIFUMXJHP21e-_kgeg_2Dc3q/preview" frameborder="0" allowfullscreen></iframe>    
             </div>  
         </div>  
         <div class="carousel-item">  
             <div class="video-container">  
-                <iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" frameborder="0" allowfullscreen></iframe>  
+                <iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" frameborder="0" allowfullscreen></iframe>   
             </div>  
         </div>  
         <div class="carousel-item">  
@@ -699,25 +699,25 @@
                 <iframe src="https://drive.google.com/file/d/1LpFF-xKaNxKgrkV8mY8RuKCl7mmjRRbj/preview" frameborder="0" allowfullscreen></iframe>  
             </div>  
         </div>  
-        <div class="carousel-item">  
-              <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/tamaño.jpg"></div>
-            </div>  
         </div>  
+        <div class="carousel-item">  
+            <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/tamaño.jpg" class="d-block w-100" alt="Descripción de la imagen">  
+        </div>
         <div class="carousel-item">  
             <div class="video-container">  
                 <iframe src="https://drive.google.com/file/d/1Jvcg1PpshbiNHh2IL5jVPsX0B6RPJglz/preview" frameborder="0" allowfullscreen></iframe>  
-            </div>  
-        </div>
-    </div>
-<p><a class="carousel-control-prev" href="#videoCarousel" role="button" data-slide="prev"><br />
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span><br />
-        <span class="sr-only">Anterior</span><br />
-    </a><br />
-    <a class="carousel-control-next" href="#videoCarousel" role="button" data-slide="next"><br />
-        <span class="carousel-control-next-icon" aria-hidden="true"></span><br />
-        <span class="sr-only">Siguiente</span><br />
-    </a><br />
-</div>  </p>
+            </div>    
+    </div>  
+    <a class="carousel-control-prev" href="#videoCarousel" role="button" data-slide="prev">  
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>  
+        <span class="sr-only">Anterior</span>  
+    </a>  
+    <a class="carousel-control-next" href="#videoCarousel" role="button" data-slide="next">  
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>  
+        <span class="sr-only">Siguiente</span>  
+    </a>  
+</div>
+
 <style>  
     .video-container {  
         position: relative;  
@@ -732,6 +732,11 @@
         left: 0;  
         width: 100%;  
         height: 100%;  
+    }  
+
+    .carousel-item img {  
+        width: 100%;  
+        height: auto; /* Mantiene la proporción de la imagen */  
     }  
 </style>
 
