deploy: 8141fcb112c84d7a4bb44d8a239825e56c33609c

--- a/tecnicos/mt09/index.html
+++ b/tecnicos/mt09/index.html
@@ -848,11 +848,11 @@
 
 <p>1- Prueba con material compuesto
 Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y arcilla de secado sin horno. Tiempo de secado 24h.</p>
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg"></iframe></div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg"></iframe></div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg"></iframe></div>
 
 <div align="center"> 
 <iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="320" height="480" allow="autoplay"></iframe></div>
@@ -864,7 +864,7 @@ Para esta prueba se utilizó resina epoxi con endurecedor al 50%, el tiempo de s
 
 <div align="center"><iframe src="https://drive.google.com/file/d/1fyPOB2v16m1RocQO5SKsFn2vVoazZw79/preview" width="320" height="480" allow="autoplay"></iframe></div>
 
-<div align="center"><iframe src="https://drive.google.com/file/d/1fcG3JSl6nFGqTOVNWTb-ZDhNYO4WbOz7/preview" width="320" height="480" allow="autoplay"></iframe></div>
+<div align="center"><iframe src="https://drive.google.com/file/d/1fcG3JSl6nFGqTOVNWTb-ZDhNYO4WbOz7/preview" width="640" height="480" allow="autoplay"></iframe></div>
 
 <p>Resulados finales</p>
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166764.jpg"></div>
